; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/xmllite/extr_writer.c_write_output_buffer_quoted.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/xmllite/extr_writer.c_write_output_buffer_quoted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@quoteW = common dso_local global i32* null, align 8
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @write_output_buffer_quoted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_output_buffer_quoted(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** @quoteW, align 8
  %9 = load i32*, i32** @quoteW, align 8
  %10 = call i32 @ARRAY_SIZE(i32* %9)
  %11 = call i32 @write_output_buffer(i32* %7, i32* %8, i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @write_output_buffer(i32* %12, i32* %13, i32 %14)
  %16 = load i32*, i32** %4, align 8
  %17 = load i32*, i32** @quoteW, align 8
  %18 = load i32*, i32** @quoteW, align 8
  %19 = call i32 @ARRAY_SIZE(i32* %18)
  %20 = call i32 @write_output_buffer(i32* %16, i32* %17, i32 %19)
  %21 = load i32, i32* @S_OK, align 4
  ret i32 %21
}

declare dso_local i32 @write_output_buffer(i32*, i32*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
